<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoStudy</string>
    <string name="loginView">用户登录</string>
    <string name="userNname">用户名</string>
    <string name="password">密码</string>
    <string name="notNull">用户名或者密码不能为空</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="parent">家长</string>
    <string name="chooserole">选择角色</string>
    <string name="fill_information">信息填写</string>
    <string name="more_information">更多信息</string>
    <string name="account">账号</string>
    <string name="family_name">姓氏</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="school">学校</string>
    <string name="grade">班级</string>
    <string name="phone_number">手机</string>
    <string name="get_verif">获取验证码</string>
    <string name="name">名字</string>
    <string name="next">下一步</string>
    <string name="rm_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="successLogin">登录成功！</string>
    <string name="tryLater">请检查网络稍候重试！</string>
    <string name="serviceNotNormal">服务器异常，请稍候重试！</string>
    <string name="title_activity_browserViewPager">选择图片</string>
    <string name="title_activity_a">AActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_b">BActivity</string>
    <string name="title_activity_c">CActivity</string>
    <string name="title_activity_main">tab</string>
    <string name="main_home">主页</string>
    <string name="main_news">联系人</string>
    <string name="main_my">我的</string>
    <string name="isNotNetWork">网络连接错误，请检查手机网络再试！</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="user_logout_dialog_title">下线提示</string>
    <string name="user_logout_dialog_message">您的账号已经在另一台设备上登录，您被迫下线</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="creating_hint">创建中</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="adding_hint">正在添加</string>
    <string name="actionbar_conversation">会话</string>
    <string name="group">群聊</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_exist_toast">暂无外部存储</string>
    <string name="combine_title">(%s)</string>
    <string name="voice_length">10"</string>
    <string name="copy_toast">已复制</string>
    <string name="resend_message_hint">重发该消息？</string>
    <string name="cancel">取消</string>
    <string name="resend_commit">重发</string>
    <string name="file_not_found_toast">文件丢失</string>
    <string name="voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="send_voice_hint">松开 结束</string>
    <string name="record_voice_hint">按住 说话</string>
    <string name="cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="create_file_failed">创建文件失败</string>
    <string name="move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="time_too_short_toast">时间太短！</string>
    <string name="record_voice_permission_toast">若要使用语音功能，请选择允许录音</string>
    <string name="rest_record_time_hint">还可以说%s秒</string>
    <string name="choose_album_title">选择相册</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="sending_hint">正在发送</string>
    <string name="loading">正在加载</string>
    <string name="send">发送</string>
    <string name="load_origin_image">查看原图</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <!-- 以下为错误码提示 -->
    <string name="server_800002">AppKey信息为空</string>
    <string name="server_800003">AppKey未注册</string>
    <string name="server_800004">用户ID为空</string>
    <string name="server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="server_800012">请重新登录</string>
    <string name="server_800013">您的账号已登出，请重新登录</string>
    <string name="server_801003">用户名不存在</string>
    <string name="server_802001">用户名为空</string>
    <string name="server_801004">密码错误</string>
    <string name="server_803001">发送消息失败，状态存储异常</string>
    <string name="server_803002">发送消息失败，系统网络异常</string>
    <string name="server_803003">发送失败，目标用户未注册或从未登录过</string>
    <string name="server_803004">发送失败，此群已被删除</string>
    <string name="server_803005">您已被请出此群，不能发送消息</string>
    <string name="server_808003">讨论组数量已达上限，创建失败</string>
    <string name="server_808004">群组名长度超出上限</string>
    <string name="server_810003">用户不属于该群组</string>
    <string name="server_810005">要添加的用户尚未注册</string>
    <string name="server_810007">用户已存在</string>
    <string name="server_810008">讨论组的成员数量已达上限，添加失败</string>
    <string name="server_810009">该用户拥有的讨论组数量已达上限，添加失败</string>
    <string name="server_811003">用户不在该讨论组中，删除成员失败</string>
    <string name="server_812002">您已被请出此群，不能修改相关信息</string>
    <string name="sdk_http_899001">用户已存在</string>
    <string name="sdk_http_899006">该群已被删除</string>
    <string name="sdk_http_898005">uid不存在</string>
    <string name="sdk_http_898006">此群已被删除</string>
    <string name="sdk_http_898008">校验失败</string>
    <string name="sdk_http_898009">APPKey不存在</string>
    <string name="sdk_http_898010">请求失败，请稍候重试</string>
    <string name="sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="sdk_87x_871104">服务器返回错误</string>
    <string name="sdk_87x_871303">用户名需以数字或字母开头，长度在4-128个字节之间，且不能带_ @ -以外的字符</string>
    <string name="sdk_87x_871304">密码长度要在4-128个字节之间</string>
    <string name="sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="sdk_87x_871309">消息所含文件不存在</string>
    <string name="sdk_87x_871310">网络已断开，请检查网络连接</string>
    <string name="sdk_87x_871311">用户未设定头像，下载头像失败</string>
    <string name="sdk_87x_871403">发送失败，请稍后重试</string>
    <string name="sdk_87x_871404">下载失败，请稍后重试</string>
    <string name="sdk_87x_871201">请求超时，请检查您的网络</string>
    <!-- 聊天时间设置 -->
    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="second">秒</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_regist_next">RegistNextActivity</string>

</resources>