<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:src="@drawable/home_btn_bg" />

    <EditText
        android:id="@+id/ed_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:background="@drawable/border_shape"
        android:drawableLeft="@drawable/ic_launcher"
        android:ems="10"
        android:hint="@string/userNname"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/ed_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:background="@drawable/border_shape"
        android:drawableLeft="@drawable/ic_launcher"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000000" />

    <CheckBox
        android:id="@+id/cb_mima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rm_password"
        android:textColor="#000000" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/fillet_shape"
        android:text="@string/login"
        android:textColor="#ffffff" />

</LinearLayout>